# NexSkill

./: .env.example  .gitignore  AGENTS.md  CITATION.cff  LICENSE  NEXSKILL.md  README.md  REPRODUCIBILITY_CHECKLIST.md  pyproject.toml
analysis/: analyze_skilldag_run.py  backfill_trial_logs.py  score_skillsbench_gos.py
artifacts/expected/: alfworld_table1.json  alfworld_traintest_metrics.json  cross_scale_metrics.json  edit_effect_metrics.json  skillsbench_table1.json
benchmarks/: NOTICE.md  __init__.py  skill_use_metrics.py
benchmarks/alfworld/: README.md  __init__.py  run_alfworld.py  skilldag_runtime.py
benchmarks/shared/: __init__.py  skilldag_prompt.py
benchmarks/skillsbench/: README.md  __init__.py  graphskills_benchmark.py  skilldag_benchmark.py
benchmarks/skillsbench/_skilldag_template/: AGENTS.md  CLAUDE.md  GEMINI.md  README.md  docker-compose.yaml
configs/skillsbench/: skilldag.yaml
data/: README.md
data/nexskill_skills/building.implementation/: manifest.json
data/nexskill_skills/closing.handoff/: manifest.json
data/nexskill_skills/verifying.testing/: SKILL.md  manifest.json
data/skilldag_graphs/: README.md
docs/: INDEX.md  architecture.md  paper_reproduction.md  reproducing.md
docs/blueprints/: NEXSKILL-INTEGRATION-PLAN.md  NEXSKILL-SINGLE-ROUND-MULTI-AGENT-IMPLEMENTATION-PLAN.md  NEXSKILL-VNEXT-BLUEPRINT.md
docs/decisions/: 0001-nexskill-vnext-approved-direction.md
docs/proposals/: NEXSKILL-VNEXT-PROPOSAL.md
docs/releases/: v1.0.0.md
docs/reports/: 2026-06-30-nexskill-round-1-foundation.md  2026-06-30-nexskill-round-2-graph-proof-polish.md  2026-06-30-nexskill-round-2b-skill-pack-sdk.md  2026-06-30-nexskill-round-2c-lane-isolation-preflight.md  2026-07-01-nexskill-release-candidate-hardening.md
docs/reviews/: 2026-06-30-agent-skills-and-portable-autodev-kit-review.md  2026-06-30-development-acceleration-source-review.md
docs/sdk/: README.md  developing-skills.md  manifest-schema.md
examples/skills/: README.md
examples/skills/closing.release-notes/: SKILL.md  manifest.json
examples/skills/closing.summary-only/: SKILL.md  manifest.json
examples/skills/reviewing.self-review/: SKILL.md  manifest.json
scripts/: download_data.sh  prepare_env.sh  replay_queries.py  run_alfworld.sh  run_alfworld_traintest.sh  run_skillsbench.sh  setup.sh  validate_graph_inputs.py
skills/skilldag-retriever/: SKILL.md
skills/skilldag-retriever/agents/: openai.yaml
skills/skilldag-retriever/references/: container-layout.md
src/nexskill/: __init__.py  __main__.py  _resources.py  cli.py  contracts.py  graph.py  planner.py  preflight.py  proof.py  registry.py  report.py  scaffold.py
src/nexskill/resources/skills/building.implementation/: SKILL.md
src/nexskill/resources/skills/closing.handoff/: SKILL.md
src/nexskill/resources/skills/planning.task-breakdown/: SKILL.md  manifest.json
src/nexskill/resources/templates/skill_pack/: README.md  SKILL.md  manifest.json
src/skilldag/: __init__.py  __main__.py  cli.py  graph.py  initialize.py  search.py
tests/: test_cli.py  test_contracts.py  test_graph.py  test_initialize.py  test_nexskill_graph.py  test_packaging.py  test_planner.py  test_preflight.py  test_proof.py  test_registry.py  test_report.py  test_report_snapshot.py  test_scaffold.py
tests/fixtures/skill_packs/: README.md
tests/fixtures/skill_packs/invalid/bad-id/: SKILL.md  manifest.json
tests/fixtures/skill_packs/invalid/missing-field/: SKILL.md  manifest.json
tests/fixtures/skill_packs/invalid/no-manifest/: SKILL.md
tests/fixtures/skill_packs/valid.minimal/: SKILL.md  manifest.json
tests/nexskill_integration/: test_integration.py
tests/snapshots/: report_failed.md  report_passed.md
