[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nexskill"
version = "0.1.0"
description = "NexSkill guides the work, selects the right skill path, and proves the result."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "Tong Bai" },
    { name = "Pengfei Zhou" },
    { name = "Zhenglin Wan" },
]
keywords = ["agent", "skill-retrieval", "skill-graph", "llm", "agentic"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = []

[project.optional-dependencies]
repro = [
    "huggingface_hub[cli]>=0.23",
    "litellm>=1.0",
    "PyYAML>=6.0",
    "retry>=0.9.2",
]
alfworld = [
    "alfworld",
    "litellm>=1.0",
    "PyYAML>=6.0",
    "retry>=0.9.2",
]
dev = ["pytest>=7.0", "ruff>=0.1"]
all = [
    "huggingface_hub[cli]>=0.23",
    "alfworld",
    "litellm>=1.0",
    "PyYAML>=6.0",
    "retry>=0.9.2",
    "pytest>=7.0",
    "ruff>=0.1",
]

[project.scripts]
nexskill = "nexskill.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

# Ship NexSkill runtime resources (built-in skills + scaffold template) inside
# the wheel so an installed package is self-contained.
[tool.setuptools.package-data]
nexskill = ["resources/skills/**/*", "resources/templates/**/*"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.coverage.run]
source = ["nexskill"]
