[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nexskill"
version = "1.0.0"
description = "Local skill planning, deterministic proof, and evidence reports for agent-assisted development."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    { name = "Bahram Boutorabi" },
]
keywords = [
    "agent-assisted-development",
    "developer-tools",
    "local-verification",
    "skill-planning",
    "software-delivery",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
    "Topic :: Software Development",
    "Topic :: Software Development :: Quality Assurance",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/Real-Bimox/NexSkill"
Repository = "https://github.com/Real-Bimox/NexSkill"
Documentation = "https://github.com/Real-Bimox/NexSkill#readme"
Issues = "https://github.com/Real-Bimox/NexSkill/issues"

[project.optional-dependencies]
repro = [
    "huggingface_hub[cli]>=0.23",
    "litellm>=1.0",
    "PyYAML>=6.0",
    "retry>=0.9.2",
]
alfworld = [
    "alfworld",
    "litellm>=1.0",
    "PyYAML>=6.0",
    "retry>=0.9.2",
]
dev = ["pytest>=7.0", "ruff>=0.1"]
all = [
    "huggingface_hub[cli]>=0.23",
    "alfworld",
    "litellm>=1.0",
    "PyYAML>=6.0",
    "retry>=0.9.2",
    "pytest>=7.0",
    "ruff>=0.1",
]

[project.scripts]
nexskill = "nexskill.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

# Ship NexSkill runtime resources (built-in skills + scaffold template) inside
# the wheel so an installed package is self-contained.
[tool.setuptools.package-data]
nexskill = ["resources/skills/**/*", "resources/templates/**/*"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.coverage.run]
source = ["nexskill"]
